@@ -1,6 +1,5 @@
 package com.planit.journeyserviceprovider.controller;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -9,27 +8,26 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class JourneyServiceProviderController {
-	
+
 	@GetMapping("/getJourneyServices")
-	public List<Map<String, Object>> getJourneyServices(){
-		return List.of(
-				Map.of("order",1,"serviceName","TEMP-JOURNEY-SERVICE-1")
-//				Map.of,("order",2,"serviceName","TEMP-JOURNEY-SERVICE-2")
-				);
+	public List<Map<String, Object>> getJourneyServices() {
+		return List.of(Map.of("order", 1, "serviceName", "TEMP-JOURNEY-SERVICE-1")
+		// Map.of,("order",2,"serviceName","TEMP-JOURNEY-SERVICE-2")
+		);
 	}
-	
+
 	@GetMapping("/getJourneyFilters")
-	public List<Map<String, Object>> getJourneyFilters(){
-		return Collections.emptyList();
+	public List<Map<String, Object>> getJourneyFilters() {
+		return List.of(Map.of("order", 1, "serviceName", "VEHICLE-FILTER-SERVICE"));
 	}
-	
+
 	@GetMapping("/getWeighingService")
-	public String getWeighingService(){
+	public String getWeighingService() {
 		return "WEIGHING-SERVICE";
 	}
-	
+
 	@GetMapping("/getHeuristicService")
-	public String getHeuristicService(){
+	public String getHeuristicService() {
 		return "HEURISTIC-SERVICE";
 	}
 }
